several changes in Folder Structur

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory_ifdef(CONFIG_SENSOR sensor)
 add_subdirectory_ifdef(CONFIG_BATTERY battery)
 add_subdirectory_ifdef(CONFIG_DW1000 dw1000)
-add_subdirectory_ifdef(CONFIG_BLE ble)
-add_subdirectory_ifdef(CONFIG_DW_LED dwm_led)
+add_subdirectory_ifdef(CONFIG_BLE sit_ble)
+add_subdirectory_ifdef(CONFIG_DW_LED sit_led)
