--- a/samples/sit_ble_example/CMakeLists.txt
+++ b/samples/sit_ble_example/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(dwm_ble)
+project(sit_ble_example)
 
 target_sources(app PRIVATE
   src/main.c
