Versuch neu aufbau

--- a/drivers/sit_ble/CMakeLists.txt
+++ b/drivers/sit_ble/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 zephyr_library()
 
-zephyr_library_sources_ifdef(CONFIG_BLE ble_device.c)
-zephyr_library_sources_ifdef(CONFIG_BLE ble_init.c)
+zephyr_library_sources_ifdef(CONFIG_TEST ble_device.c)
+zephyr_library_sources_ifdef(CONFIG_TEST ble_init.c)
 
 zephyr_library_sources_ifdef(CONFIG_CTS cts.c)
