--- a/drivers/sit_led/CMakeLists.txt
+++ b/drivers/sit_led/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 zephyr_library()
 
-zephyr_library_sources_ifdef(CONFIG_DW_LED dwm_led.c)
+zephyr_library_sources_ifdef(CONFIG_SIT_LED dwm_led.c)
 
 
 
