--- a/samples/sit_ble_example/prj.conf
+++ b/samples/sit_ble_example/prj.conf
@@ -2,15 +2,15 @@
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 #UWB Tranceiver
-CONFIG_DW1000=y
+CONFIG_SIT_DW1000=y
 CONFIG_SPI=y
 CONFIG_GPIO=y
 
 #LED
-CONFIG_DW_LED=y
+CONFIG_SIT_LED=y
 
 #BLE
-CONFIG_BLE=y
+CONFIG_TEST_SVEN=y
 
 
 CONFIG_BT=y
