--- a/west.yml
+++ b/west.yml
@@ -13,7 +13,7 @@ manifest:
     - name: zephyr
       repo-path: zephyr
       remote: zephyrproject
-      revision: 41e885947e4f48aae0866df9e5fee657afb7c1cc
+      revision: v2.7.99 
       import:
         name-whitelist:
           - cmsis
