Change To SIT (Sports Indoor Tracking) structre

--- a/drivers/sit_ble/Kconfig
+++ b/drivers/sit_ble/Kconfig
@@ -1,9 +1,9 @@
-config TEST_SVEN
-	bool 
+config SIT_BLE
+	bool "SIT BLE Interface"
 	help
 	  Enable BLE Funcionality 
 	  
 config SIT_CTS
-	bool 
+	bool "SIT CTS Interface"
 	help
 	  Enable CTS Funcionality 
