--- a/samples/sit_ble_example/prj.conf
+++ b/samples/sit_ble_example/prj.conf
@@ -2,7 +2,7 @@
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 #UWB Tranceiver
-CONFIG_SIT_DW1000=y
+CONFIG_DW1000=y
 CONFIG_SPI=y
 CONFIG_GPIO=y
 
@@ -10,7 +10,7 @@ CONFIG_GPIO=y
 CONFIG_SIT_LED=y
 
 #BLE
-CONFIG_TEST_SVEN=y
+CONFIG_SIT_BLE=y
 
 
 CONFIG_BT=y
