Changed from c to c++

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,3 +1,8 @@
+zephyr_library()
+
+zephyr_library_sources_ifdef(CONFIG_SIT sit.cpp)
+
+
 add_subdirectory_ifdef(CONFIG_SENSOR sensor)
 add_subdirectory_ifdef(CONFIG_BATTERY battery)
 add_subdirectory_ifdef(CONFIG_DW1000 dw1000)
