--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -11,3 +11,8 @@ rsource "sit_ble/Kconfig"
 rsource "sit_led/Kconfig"
 
 endmenu
+
+menuconfig SIT
+	bool "Sport Indoor Tracking"
+	help
+		Include SIT LIB
