--- a/drivers/sit_ble/CMakeLists.txt
+++ b/drivers/sit_ble/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 zephyr_library()
 
-zephyr_library_sources_ifdef(CONFIG_SIT_BLE ble_device.cpp)
-zephyr_library_sources_ifdef(CONFIG_SIT_BLE ble_init.cpp)
+zephyr_library_sources_ifdef(CONFIG_SIT_BLE ble_device.c)
+zephyr_library_sources_ifdef(CONFIG_SIT_BLE ble_init.c)
 
-zephyr_library_sources_ifdef(CONFIG_CTS cts.cpp)
+zephyr_library_sources_ifdef(CONFIG_CTS cts.c)
