volles update aller datein

--- a/samples/hello_leds/CMakeLists.txt
+++ b/samples/hello_leds/CMakeLists.txt
@@ -5,7 +5,7 @@ set(DTS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 set(BOARD qorvo_dwm3001cdk)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(adc_battery)
+project(hello_leds)
 
 
 target_sources(app PRIVATE src/main.c)
