--- a/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
+++ b/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
@@ -109,7 +109,7 @@
 	lis2dh12: lis2dh12@19 {
 		compatible = "st,lis2dh12", "st,lis2dh";
 		reg = <0x19>;
-		irq-gpios = <&gpio0 2 GPIO_ACTIVE_HIGH>;
+		irq-gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
 	};
 };
 
@@ -125,12 +125,12 @@
 &spi2 {
 	compatible = "nordic,nrf-spi";
 	status = "okay";
-	cs-gpios = <&gpio0 17 GPIO_ACTIVE_LOW>;
+	cs-gpios = <&gpio0 6 GPIO_ACTIVE_LOW>;
 	pinctrl-0 = <&spi2_default>;
 	pinctrl-1 = <&spi2_sleep>;
 	pinctrl-names = "default", "sleep";
 	dw3110@0 {
-		compatible = "decawave,dw3110";
+		compatible = "qorovo,dw3110";
 		spi-max-frequency = <8000000>;
 		int-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;	/* P1.02 */
 		reset-gpios = <&gpio0 25 GPIO_ACTIVE_LOW>;	/* P0.25 */
