--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -6,6 +6,8 @@ rsource "battery/Kconfig"
 
 rsource "dw1000/Kconfig"
 
+rsource "dw3110/Kconfig"
+
 rsource "sit_ble/Kconfig"
 
 rsource "sit_led/Kconfig"
