--- a/samples/sit_ss_twr_initator_ble_output/prj.conf
+++ b/samples/sit_ss_twr_initator_ble_output/prj.conf
@@ -19,16 +19,17 @@ CONFIG_SIT_LED=y
 
 #Logging 
 CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_LOG2_MODE_DEFERRED=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
 #BLE
 CONFIG_SIT_BLE=y
 CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
-CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DIS=y
 CONFIG_BT_ATT_PREPARE_COUNT=5
 CONFIG_BT_BAS=y
