got a command from pi gateway

--- a/subsys/sit_ble/Kconfig
+++ b/subsys/sit_ble/Kconfig
@@ -1,5 +1,7 @@
 config SIT_BLE
 	bool "SIT BLE Interface"
+	imply BT
+	imply FLASH
 	help
 	  Enable BLE Funcionality 
 	  
@@ -7,3 +9,4 @@ config SIT_CTS
 	bool "SIT CTS Interface"
 	help
 	  Enable CTS Funcionality 
+
