--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -3,7 +3,9 @@ zephyr_library()
 zephyr_include_directories(sit)
 zephyr_include_directories(sit_ble)
 zephyr_include_directories(sit_led)
+zephyr_include_directories(sit_mesh)
 
 add_subdirectory_ifdef(CONFIG_SIT sit)
 add_subdirectory_ifdef(CONFIG_SIT_BLE sit_ble)
 add_subdirectory_ifdef(CONFIG_SIT_LED sit_led)
+add_subdirectory_ifdef(CONFIG_SIT_MESH sit_mesh)
