init Sports Tracking System Folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Point to root directory.
 set(HSM_DIR ${CMAKE_CURRENT_LIST_DIR} CACHE PATH "root directory")
 
+add_subdirectory(sport_indoor_tracking)
 add_subdirectory(samples)
 add_subdirectory(drivers)
 
