add main system

--- a/sports_indoor_tracking/CMakeLists.txt
+++ b/sports_indoor_tracking/CMakeLists.txt
@@ -6,7 +6,7 @@ set(DTS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/..")
 set(BOARD qorvo_dwm3001cdk)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(sport_indoor_tracking)
+project(sports_indoor_tracking)
 
 # the binary only library from Qorvo has problems with -Os or -O2
 zephyr_library_compile_options(-O1)
