--- a/sports_indoor_tracking/prj.conf
+++ b/sports_indoor_tracking/prj.conf
@@ -1,4 +1,5 @@
 # Activate SIT Subsys
+CONFIG_SIT=y
 CONFIG_SIT_LED=y
 
 # Logging 
@@ -18,3 +19,18 @@ CONFIG_STD_CPP17=y
 #JSON
 CONFIG_SIT_JSON=y
 CONFIG_JSON_LIBRARY=y
+
+#BLE 
+CONFIG_SIT_BLE=y
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_SMP=y
+CONFIG_BT_SIGNING=y
+CONFIG_BT_DIS=y
+CONFIG_BT_ATT_PREPARE_COUNT=5
+CONFIG_BT_BAS=y
+CONFIG_BT_PRIVACY=y
+CONFIG_BT_DEVICE_APPEARANCE=833
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
+CONFIG_BT_DEVICE_NAME_MAX=65
