first changes to port (still error)

--- a/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk-pinctrl.dtsi
+++ b/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk-pinctrl.dtsi
@@ -18,4 +18,19 @@
 			low-power-enable;
 		};
 	};
+
+	i2c0_default: i2c0_default {
+		group1 {
+			psels = <NRF_PSEL(TWIM_SDA, 0, 24)>,
+					<NRF_PSEL(TWIM_SCL, 0, 36)>;
+		};
+	};
+
+	i2c0_sleep: i2c0_sleep {
+		group1 {
+			psels = <NRF_PSEL(TWIM_SDA, 0, 24)>,
+					<NRF_PSEL(TWIM_SCL, 0, 36)>;
+			low-power-enable;
+		};
+	};
 };
