--- a/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
+++ b/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
@@ -10,7 +10,7 @@
 
 / {
 	model = "Qorovo DWM3001CDK";
-	compatible = "qorovo,dwm3001cdk";
+	compatible = "qorvo,dwm3001cdk";
 
 	chosen {
 		zephyr,console        = &uart0;
@@ -107,8 +107,9 @@
 	compatible = "nordic,nrf-twim";
 	status = "okay";
 	clock-frequency = <I2C_BITRATE_FAST>;
-	sda-pin = <24>;
-	scl-pin = <36>;
+	pinctrl-0=<&i2c0_default>;
+	pinctrl-1=<&i2c0_sleep>;
+	pinctrl-names = "default", "sleep";
 	/* embedded LIS2DH accelerometer  */
 	lis2dh12: lis2dh12@19 {
 		compatible = "st,lis2dh12", "st,lis2dh";
@@ -135,7 +136,7 @@
 	miso-pin = <29>;
 	cs-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 	dwm3000: dw3000@0 {
-		compatible = "decawave,dw3000";
+		compatible = "qorvo,dw3000";
 		label = "DW3000";
 		spi-max-frequency = <1000000>;
 		reg = <0>;
