--- a/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
+++ b/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
@@ -6,7 +6,7 @@
 
 /dts-v1/;
 #include <nordic/nrf52833_qiaa.dtsi>
-#include <qorvo_dwm3001cdk-pinctrl.dtsi>
+#include "qorvo_dwm3001cdk-pinctrl.dtsi"
 
 / {
 	model = "Qorovo DWM3001CDK";
@@ -46,7 +46,7 @@
 	pwmleds {
 		compatible = "pwm-leds";
 		pwm_led0_red: pwm_led_0 {
-			pwms = <&pwm0 22>;
+			pwms =  <&pwm0 0 PWM_MSEC(22) PWM_POLARITY_INVERTED>;
 			label = "Red PWM LED";
 		};
 	};
@@ -73,7 +73,7 @@
 		pwm-led0   = &pwm_led0_red;
 		watchdog0  = &wdt0;
 		accel0     = &lis2dh12;
-		dw30000	   = &dwm3000;
+		dw3000	   = &dwm3000;
 	};
 
 };
@@ -113,7 +113,6 @@
 	/* embedded LIS2DH accelerometer  */
 	lis2dh12: lis2dh12@19 {
 		compatible = "st,lis2dh12", "st,lis2dh";
-		label = "LIS2DH12-ACCEL";
 		reg = <0x19>;
 		irq-gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
 	};
@@ -123,22 +122,22 @@
 	compatible = "nordic,nrf-spim";
 	status = "okay";
 	cs-gpios = <&gpio0 30 GPIO_ACTIVE_LOW>;
-	sck-pin = <31>;
-	mosi-pin = <27>;
-	miso-pin = <7>;
+	pinctrl-0 = <&spi1_default>;
+	pinctrl-1 = <&spi1_sleep>;
+	pinctrl-names = "default", "sleep";
 };
 
 &spi3 {
 	compatible = "nordic,nrf-spim";
 	status = "okay";
-	sck-pin = <3>;
-	mosi-pin = <8>;
-	miso-pin = <29>;
+	pinctrl-0 = <&spi2_default>;
+	pinctrl-1 = <&spi2_sleep>;
+	pinctrl-names = "default", "sleep";
 	cs-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 	dwm3000: dw3000@0 {
 		compatible = "qorvo,dw3000";
-		label = "DW3000";
 		spi-max-frequency = <1000000>;
+		status = "okay";
 		reg = <0>;
 		reset-gpios = <&gpio0 25 GPIO_ACTIVE_LOW>;
 		irq-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
@@ -147,9 +146,9 @@
 };
 
 &pwm0 {
-	status = "okay";
-	ch0-pin = <22>;
-	ch0-inverted;
+	pinctrl-0 = <&pwm0_default>;
+	pinctrl-1 = <&pwm0_sleep>;
+	pinctrl-names = "default", "sleep";
 };
 
 &flash0 {
