--- a/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
+++ b/boards/arm/qorvo_dwm3001cdk/qorvo_dwm3001cdk.dts
@@ -108,11 +108,11 @@
 	status = "okay";
 	clock-frequency = <I2C_BITRATE_FAST>;
 	pinctrl-0=<&i2c0_default>;
-	pinctrl-1=<&i2c0_sleep>;
-	pinctrl-names = "default", "sleep";
+	pinctrl-names = "default";
 	/* embedded LIS2DH accelerometer  */
 	lis2dh12: lis2dh12@19 {
 		compatible = "st,lis2dh12", "st,lis2dh";
+		status = "okay";
 		reg = <0x19>;
 		irq-gpios = <&gpio0 16 GPIO_ACTIVE_HIGH>;
 	};
@@ -123,16 +123,14 @@
 	status = "okay";
 	cs-gpios = <&gpio0 30 GPIO_ACTIVE_LOW>;
 	pinctrl-0 = <&spi1_default>;
-	pinctrl-1 = <&spi1_sleep>;
-	pinctrl-names = "default", "sleep";
+	pinctrl-names = "default";
 };
 
 &spi3 {
 	compatible = "nordic,nrf-spim";
 	status = "okay";
-	pinctrl-0 = <&spi2_default>;
-	pinctrl-1 = <&spi2_sleep>;
-	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&spi3_default>;
+	pinctrl-names = "default";
 	cs-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 	dwm3000: dw3000@0 {
 		compatible = "qorvo,dw3000";
@@ -147,8 +145,7 @@
 
 &pwm0 {
 	pinctrl-0 = <&pwm0_default>;
-	pinctrl-1 = <&pwm0_sleep>;
-	pinctrl-names = "default", "sleep";
+	pinctrl-names = "default";
 };
 
 &flash0 {
