--- a/samples/03b_sit_ss_twr_initator_ble_output/prj.conf
+++ b/samples/03b_sit_ss_twr_initator_ble_output/prj.conf
@@ -10,10 +10,11 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_NEWLIB_LIBC=y
 
 #C++
-CONFIG_CPLUSPLUS=y
-CONFIG_LIB_CPLUSPLUS=y
+CONFIG_CPP=y
+CONFIG_CPP_MAIN=y
 CONFIG_STD_CPP11=n
 CONFIG_STD_CPP17=y
+CONFIG_STD_CPP20=y
 
 #BLE
 CONFIG_SIT_BLE=y
