--- a/samples/04_sit_ss_twr_responder/prj.conf
+++ b/samples/04_sit_ss_twr_responder/prj.conf
@@ -11,8 +11,8 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_NEWLIB_LIBC=y
 
 #C++
-CONFIG_CPP=y
-CONFIG_CPP_MAIN=y
+CONFIG_CPP=n
+CONFIG_CPP_MAIN=n
 CONFIG_STD_CPP11=n
-CONFIG_STD_CPP17=y
-CONFIG_STD_CPP20=y
+CONFIG_STD_CPP17=n
+CONFIG_STD_CPP20=n
