--- a/sports_indoor_tracking/prj.conf
+++ b/sports_indoor_tracking/prj.conf
@@ -10,11 +10,9 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 # newlib is used to include extended math.h funcions (e.g. fabs())
 CONFIG_NEWLIB_LIBC=y
 
-#C++
-CONFIG_CPLUSPLUS=y
-CONFIG_LIB_CPLUSPLUS=y
-CONFIG_STD_CPP11=n
-CONFIG_STD_CPP17=y
+# HW INFO
+CONFIG_HWINFO=y
+CONFIG_I2C=y
 
 #JSON
 CONFIG_SIT_JSON=y
