--- a/samples/05_sit_ble_json/prj.conf
+++ b/samples/05_sit_ble_json/prj.conf
@@ -1,11 +1,8 @@
-<<<<<<< HEAD
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
-=======
->>>>>>> ff362bf66e19695f84539017a17d068f88ec076d
 # Activate SIT Subsys
-CONFIG_SIT_LED=y
+CONFIG_SIT_LED=ys
 
 # Logging 
 CONFIG_LOG=y
@@ -15,7 +12,6 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 # newlib is used to include extended math.h funcions (e.g. fabs())
 CONFIG_NEWLIB_LIBC=y
 
-<<<<<<< HEAD
 #JSON
 CONFIG_SIT_JSON=y
 
@@ -23,14 +19,3 @@ CONFIG_SIT_JSON=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_DEBUG_THREAD_INFO=y
 
-=======
-#C++
-CONFIG_CPLUSPLUS=y
-CONFIG_LIB_CPLUSPLUS=y
-CONFIG_STD_CPP11=n
-CONFIG_STD_CPP17=y
-
-#JSON
-CONFIG_SIT_JSON=y
-CONFIG_JSON_LIBRARY=y
->>>>>>> ff362bf66e19695f84539017a17d068f88ec076d
